force-app/main/default/objects/Vehicle_Inspection_Report__c/Vehicle_Inspection_Report__c.object-meta.xml
<CustomObject>
    <description>Created By: Nagendra Lagisetty
Created Date: 18 Jan 21
User Story: https://jira.hyundai-autoever.eu/browse/GD-2251</description>
    <label>Vehicle Inspection Report</label>
    <nameField>
        <displayFormat>VI-{0000}</displayFormat>
        <label>VI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Inspection Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>