force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/Battery_Performance__c.field-meta.xml
<CustomField>
    <fullName>Battery_Performance__c</fullName>
    <label>Battery Performance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHECKED AND OK</fullName>
            </value>
            <value>
                <fullName>WILL REQUIRE FUTURE ATTENTION</fullName>
            </value>
            <value>
                <fullName>REQUIRES IMMEDIATE ATTENTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>