force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/Brake_Pads_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Brake_Pads_Measurement__c</fullName>
    <label>Brake Pads Measurement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>