force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/Brake_Shoes_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Brake_Shoes_Measurement__c</fullName>
    <label>Brake Shoes Measurement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>