force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/Brakemeasurementsnotakenthisservicevisit__c.field-meta.xml
<CustomField>
    <fullName>Brakemeasurementsnotakenthisservicevisit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Brake measurements not taken this service visit.</description>
    <inlineHelpText>Brake measurements not taken this service visit.</inlineHelpText>
    <label>Brakemeasurementsnotakenthisservicevisit</label>
    <type>Checkbox</type>
</CustomField>