force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/Customer_s_Radio_Station__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Radio_Station__c</fullName>
    <label>Customer´s Radio Station</label>
    <length>250</length>
    <type>Text</type>
</CustomField>