force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/Drive_Belts__c.field-meta.xml
<CustomField>
    <fullName>Drive_Belts__c</fullName>
    <label>Drive Belts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHECKED AND OK</fullName>
            </value>
            <value>
                <fullName>WILL REQUIRE FUTURE ATTENTION</fullName>
            </value>
            <value>
                <fullName>REQUIRES IMMEDIATE ATTENTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>