force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/Heating_AC__c.field-meta.xml
<CustomField>
    <fullName>Heating_AC__c</fullName>
    <label>Heating/AC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHECKED AND OK</fullName>
            </value>
            <value>
                <fullName>REQUIRES IMMEDIATE ATTENTION</fullName>
            </value>
            <value>
                <fullName>WILL REQUIRE FUTURE ATTENTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>