force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/iCare__c.field-meta.xml
<CustomField>
    <fullName>iCare__c</fullName>
    <label>iCare</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seat Cover Fitted</fullName>
            </value>
            <value>
                <fullName>Floor Mat Fitted</fullName>
            </value>
            <value>
                <fullName>Roadside Assist Renewal</fullName>
            </value>
            <value>
                <fullName>Satnav Mapcare</fullName>
            </value>
            <value>
                <fullName>Customer Radio Station</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>