force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/kPa_Left_Front__c.field-meta.xml
<CustomField>
    <fullName>kPa_Left_Front__c</fullName>
    <label>kPa Left Front</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>