force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/kPa_Right_Rear__c.field-meta.xml
<CustomField>
    <fullName>kPa_Right_Rear__c</fullName>
    <label>kPa Rigth Rear</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>