force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/kPa_Spare__c.field-meta.xml
<CustomField>
    <fullName>kPa_Spare__c</fullName>
    <label>kPa Spare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>