force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/Legal_Text_DPA__c.field-meta.xml
<CustomField>
    <fullName>Legal_Text_DPA__c</fullName>
    <label>Legal Text DPA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>