force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/Legal_Text_Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Legal_Text_Terms_Conditions__c</fullName>
    <label>Legal Text T&amp;C</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>