force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/Radiator_Heater_AC_hoses__c.field-meta.xml
<CustomField>
    <fullName>Radiator_Heater_AC_hoses__c</fullName>
    <label>Radiator/Heater/AC-hoses</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHECKED AND OK</fullName>
            </value>
            <value>
                <fullName>WILL REQUIRE FUTURE ATTENTION</fullName>
            </value>
            <value>
                <fullName>REQUIRES IMMEDIATE ATTENTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>