force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/Report_Completed__c.field-meta.xml
<CustomField>
    <fullName>Report_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report Completed</label>
    <type>Checkbox</type>
</CustomField>