force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/Service_Booking__c.field-meta.xml
<CustomField>
    <fullName>Service_Booking__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Booking</label>
    <referenceTo>Repair__c</referenceTo>
    <relationshipLabel>Vehicle Inspection Reports</relationshipLabel>
    <relationshipName>Vehicle_Inspection_Reports</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>