force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/Tail_Brake_Licence_Plate_Lights__c.field-meta.xml
<CustomField>
    <fullName>Tail_Brake_Licence_Plate_Lights__c</fullName>
    <label>Tail/Brake/Licence Plate Lights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHECKED AND OK</fullName>
            </value>
            <value>
                <fullName>REQUIRES IMMEDIATE ATTENTION</fullName>
            </value>
            <value>
                <fullName>WILL REQUIRE FUTURE ATTENTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>