force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/Tyre_Tread_Depth_mm_Right_Rear__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Tread_Depth_mm_Right_Rear__c</fullName>
    <label>Tyre Tread Depth (mm) Right Rear</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>