force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/Tyre_Wear__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Wear__c</fullName>
    <label>Tyre Wear</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Uneven_Tyre_Wear__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Correct Inflation Check Inflation Pressure Monthly</fullName>
            </value>
            <value>
                <fullName>Alignment Check</fullName>
            </value>
            <value>
                <fullName>Tyre Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>