force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/Uneven_Tyre_Wear__c.field-meta.xml
<CustomField>
    <fullName>Uneven_Tyre_Wear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uneven Tyre Wear</label>
    <type>Checkbox</type>
</CustomField>