force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/Vehicle_Account__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Account__c</fullName>
    <formula>Service_Booking__r.Vehicle__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Account</label>
    <type>Text</type>
</CustomField>