force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/Vehicle_Condition_Report__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Condition_Report__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vehicle Condition Report</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Service_Booking__c</field>
            <operation>equals</operation>
            <valueField>StatusConfirmation__c.Repair__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>StatusConfirmation__c</referenceTo>
    <relationshipLabel>Vehicle Inspection Reports</relationshipLabel>
    <relationshipName>Vehicle_Inspection_Reports</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>