force-app/main/default/objects/Vehicle_Inspection_Report__c/fields/WorkshopSignatureId__c.field-meta.xml
<CustomField>
    <fullName>WorkshopSignatureId__c</fullName>
    <label>Workshop Signature Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>